<resources>
    <string name="app_name">Chore Tracker</string>
    <string name="title_activity_parent_main">ParentMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chores">Chores</string>
    <string name="title_points">Points</string>
    <string name="title_trade">Trade</string>
    <string name="title_activity_child_main">ChildMainActivity</string>
    <string name="title_children">Children</string>
    <string name="title_store">Store</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_your_child">Register your child</string>
    <string name="name">Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="choose_child_color">Choose child color</string>
    <string name="chore_streak">Chore Streak:</string>
    <string name="points">Points:</string>
    <string name="chore_name">Chore name:</string>
    <string name="chore_description">Description:</string>
    <string name="set_point_value">Set point value:</string>
    <string name="assigned_chores">Assigned chores</string>
    <string-array name="colors">
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Yellow</item>
    </string-array>
</resources>
