<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_child_points">

    <fragment
        android:id="@+id/navigation_child_chores"
        android:name="com.lambdaschool.choretracker.activity.ui_child.home.ChoresFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_child_points"
        android:name="com.lambdaschool.choretracker.activity.ui_child.dashboard.PointsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_points_child" />

    <fragment
        android:id="@+id/navigation_child_trade"
        android:name="com.lambdaschool.choretracker.activity.ui_child.notifications.TradeFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_trade_child" />
</navigation>