<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_children">

    <fragment
        android:id="@+id/navigation_chores"
        android:name="com.lambdaschool.choretracker.activity.ui_parent.chores.ParentChoresFragment"
        android:label="@string/title_chores"
        tools:layout="@layout/fragment_dashboard_parent" />

    <fragment
        android:id="@+id/navigation_children"
        android:name="com.lambdaschool.choretracker.activity.ui_parent.children.ChildrenFragment"
        android:label="@string/title_children"
        tools:layout="@layout/fragment_chores_parent" />

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.lambdaschool.choretracker.activity.ui_parent.store.NotificationsFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store_parent" />
</navigation>